# cpp_project_start

./: CMakeLists.txt  app_config.h.in  readme.md
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/: calc.h
lib/src/: calc.cpp
tests/: CMakeLists.txt
tests/lib/: unit_test.md
tests/src/: CMakeLists.txt  main_tests.cpp
